# pico_tele_agx

./: .gitignore  README.md  docker.sh
src/agx_arm_ros/: README.md  README_EN.md
src/agx_arm_ros/scripts/: can_muti_activate.sh
src/agx_arm_ros/src/agx_arm_ctrl/: package.xml
src/agx_arm_ros/src/agx_arm_ctrl/agx_arm_ctrl/: agx_arm_ctrl_single_node.py
src/agx_arm_ros/src/agx_arm_ctrl/agx_arm_ctrl/effector/: agx_gripper.py
src/agx_arm_ros/src/agx_arm_ctrl/launch/: rviz_single_agx_arm.launch.py  rviz_zmebot_description.launch.py  start_dual_agx_arm.launch.py  start_single_agx_arm.launch.py
src/agx_arm_ros/src/agx_arm_description/launch/: display.launch.py
src/agx_arm_ros/src/agx_arm_moveit/: README.md  README_EN.md  package.xml
src/agx_arm_ros/src/agx_arm_moveit/launch/: _moveit_config_builder.py  demo.launch.py  move_group.launch.py  rsp.launch.py
src/arm_interfaces/: CMakeLists.txt  package.xml
src/ik_solver/: CMakeLists.txt  package.xml
src/ik_solver/include/: main.h
src/ik_solver/src/: main.cpp  main.cppbk
src/ik_solver_py/: package.xml  setup.cfg  setup.py
src/ik_solver_py/ik_solver_py/: main.py
src/ik_test/: CMakeLists.txt  README.md
src/ik_test/src/: main.cpp
src/ik_test/urdf/: auto_collision.srdf  auto_collision.urdf  eef_env_collision.srdf  eef_env_collision.urdf  eef_self_collision.urdf  sync_collision.srdf  sync_collision.urdf  zmebot.urdf
src/ik_test/urdf/meshes/: base_link.STL  gimbal_camera_link.STL  gimbal_link1.STL  gimbal_link2.STL  left_camera_base_link.STL  left_camera_link.STL  left_link1.STL  left_link2.STL  left_link3.STL  left_link4.STL  left_link5.STL  left_link6.STL  left_link7.STL  left_tool_base_link.STL  left_tool_link1.STL  left_tool_link2.STL  lifting_base_link.STL  right_camera_base_link.STL  right_camera_link.STL  right_link1.STL  right_link2.STL  right_link3.STL  right_link4.STL  right_link5.STL  right_link6.STL  right_link7.STL  right_tool_base_link.STL  right_tool_link1.STL  right_tool_link2.STL
src/picoxr/: CMakeLists.txt  package.xml
src/picoxr/src/: pico_zme.cpp  publisher.cpp
