<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>picoxr</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhenweibian@zhangmen.com">zhenweibian</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>xr_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>piper</depend>

  <build_depend>ament_index_cpp</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>

  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
